<resources>
    <string name="app_name">GroupIT</string>

    // commons
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="clear_all">Clear All</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="feedback">Feedback</string>
    <string name="upgrade">Upgrade</string>
    <string name="not_now">Not Now</string>
    <string name="restore">Restore</string>
    <string name="agree">Agree</string>

    <!-- data and time -->
    <string name="sunday">Su</string>
    <string name="monday">Mo</string>
    <string name="tuesday">Tu</string>
    <string name="wednesday">We</string>
    <string name="thursday">Th</string>
    <string name="friday">Fr</string>
    <string name="saturday">Sa</string>

    <string name="day_ago">\u0020day ago</string>
    <string name="days_ago">\u0020days ago</string>

    <string name="hour_ago">\u0020hr ago</string>
    <string name="hours_ago">\u0020hrs ago</string>

    <string name="minute_ago">\u0020min ago</string>
    <string name="minutes_ago">\u0020mins ago</string>

    <string name="week_ago">\u0020week ago</string>
    <string name="weeks_ago">\u0020weeks ago</string>

    <string name="now">now</string>

    <string name="today">Today</string>
    <string name="hour">Hour</string>
    <string name="hours">Hours</string>
    <string name="minute">Minute</string>
    <string name="minutes">Minutes</string>
    <string name="second">Second</string>
    <string name="seconds">Seconds</string>


    // dialogs / toast (message need to confirm to user)
    <string name="loading">Loading&#8230;</string>
    <string name="saving">Saving&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="signing_in">Signing in&#8230;</string>
    <string name="generic_error_msg_title">Oops!</string>
    <string name="generic_error_msg">We\'re having trouble completing your request. Please try again.</string>

    <string name="internet_connection_problem_title">Internet connection problem</string>
    <string name="internet_connection_problem_message">You currently have no internet connection. Please check your network / Wi-Fi connection and try again.</string>

    <string name="save_data_error">Can not save data!</string>

    // Login screen
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="login_success">Login success</string>

    //dashboard
    <string name="notes">Notes</string>
    <string name="manage_channels">Manage Channel Subscription</string>
    <string name="settings">Settings</string>
    <string name="send_note">Send a note</string>
    <string name="inbox">Inbox</string>
    <string name="sent_notes">Sent notes</string>
    <string name="about">About</string>
    <string name="tnc">Terms of Use</string>
    <string name="signout">Sign Out</string>

    // Main screen
    <string name="main_category_title">Home</string>
    <string name="next">Next</string>
    <string name="send">Send</string>
</resources>
