<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.singtel.groupit.view.fragment.NotesFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteTwo"
        android:orientation="vertical"
        tools:ignore="MissingPrefix">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/action_bar_size"
            android:background="@color/secondaryBlue">

            <ImageView
                android:id="@+id/bt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/space_normal"
                android:onClick="@{fragment::onBackClick}"
                android:src="@drawable/ic_back" />

            <TextView
                style="@style/topbarTitle"
                android:text="@string/notes" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_send_note"
                style="@style/dashboardMenuItem"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_sendnote"
                android:drawablePadding="@dimen/space_normal"
                android:onClick="@{fragment::onSendNoteClick}"
                android:text="@string/send_note" />

            <View style="@style/LeftInsetDivider" />

            <TextView
                android:id="@+id/tv_inbox"
                style="@style/dashboardMenuItem"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_inbox"
                android:drawablePadding="@dimen/space_normal"
                android:onClick="@{fragment::onInboxClick}"
                android:text="@string/inbox" />

            <View style="@style/LeftInsetDivider" />

            <TextView
                android:id="@+id/tv_sent"
                style="@style/dashboardMenuItem"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_sent"
                android:drawablePadding="@dimen/space_normal"
                android:onClick="@{fragment::onSentClick}"
                android:text="@string/sent" />
        </LinearLayout>
    </LinearLayout>
</layout>