<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.singtel.groupit.view.activity.MainActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_size"
        android:background="?attr/colorPrimary"
        app:contentInsetEnd="@dimen/space_none"
        app:contentInsetLeft="@dimen/space_none"
        app:contentInsetRight="@dimen/space_none"
        app:contentInsetStart="@dimen/space_none"
        tools:ignore="MissingPrefix">


        <TextView
            android:id="@+id/tv_spinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padded_action_bar_size"
            android:layout_marginStart="@dimen/padded_action_bar_size"
            android:clickable="true"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:paddingLeft="@dimen/space_normal"
            android:paddingRight="@dimen/space_normal"
            android:text="@string/send_note"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize_title"
            app:fontPath="@string/font_avenirltpro_book" />


    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/contacts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/item_selectable_contact"
            android:layout_above="@+id/layout_buttons"/>

        <LinearLayout android:id="@+id/layout_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainYellow"
            android:layout_alignParentBottom="true">
            <TextView android:id="@+id/bt_cancel"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="15sp"
                android:padding="@dimen/space_medium"
                android:gravity="center"
                android:textColor="@color/white"/>
            <View android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_medium"
                android:layout_marginBottom="@dimen/space_medium"
                android:background="@color/white"/>
            <TextView android:id="@+id/bt_done"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textSize="15sp"
                android:padding="@dimen/space_medium"
                android:gravity="center"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>